[tool.poetry]
name = "coingecko-cli"
version = "0.1.0"
description = ""
authors = ["yishern <44721502+yishern@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "coingecko_cli" }]

[tool.poetry.scripts]
cg = "coingecko_cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.9.0" }
requests = "^2.31.0"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
